--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                         </li>
                     </ul>
                 </nav>
+                <div class="header__burger">
+                    <div class="header__burger-el"></div>
+                </div>
             </div>
         </header>
         <main class="main">
@@ -139,7 +142,7 @@
                                     distinctio, quo sapiente, officia est corrupti quaerat illo mollitia aut deleniti
                                     voluptatibus alias sed. Ipsam facilis non beatae assumenda illo!
                                 </div>
-                                .
+                                
                             </div>
                         </article>
                     </div>
