--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                             <a href="#" class="nav__link">Works</a>
                         </li>
                         <li class="nav__item">
-                            <a href="#" class="nav__link">Blog</a>
+                            <a href="blog.html" class="nav__link">Blog</a>
                         </li>
                         <li class="nav__item">
                             <a href="#" class="nav__link">Contact</a>
@@ -149,6 +149,25 @@
                 </div>
             </section>
         </main>
+        <footer class="footer">
+            <div class="container footer__container">
+                <ul class="social">
+                    <li class="social__item">
+                        <a href="" class="social__link vk">vk</a>
+                    </li>
+                    <li class="social__item">
+                        <a href="" class="social__link telegram">telegram</a>
+                    </li>
+                    <li class="social__item">
+                        <a href="" class="social__link github">github</a>
+                    </li>
+                    <li class="social__item">
+                        <a href="" class="social__link ok">ok</a>
+                    </li>
+                </ul>
+                <div class="footer__text">Copyright ©2020 All rights reserved </div>
+            </div>
+        </footer>
     </div>
 </body>
 
