--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Портфолио</title>
@@ -40,8 +40,8 @@
                 <div class="container about__container">
                     <div class="about__info">
                         <h1 class="about__title">
-                            Привет, я Джон, <br>
-                            Креативный технолог
+                            Hi, I am John, <br>
+                            Creative Technologist
                         </h1>
                         <div class="about__desc">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. In vel cupiditate, ex delectus
@@ -50,7 +50,7 @@
                             autem
                             nihil. Esse dolorem laborum id blanditiis.
                         </div>
-                        <button class="button download-btn">Скачать резюме</button>
+                        <button class="button download-btn">Download Resume</button>
                     </div>
                     <div class="about__avatar">
                         <img src="img/John.png" alt="Автар" class="about__img">
